# MetaMode

./: .claudeignore  .gitignore  .obsidianignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.ru.md  pyproject.toml
.claude/: settings.json
daily/: 2026-04-11.md  2026-04-12.md  2026-04-13.md  example-2026-01-15.md
decisions/: 0001-mem0-cloud-as-memory-provider.md
docs/: cheatsheet.md  cheatsheet.ru.md  commands.md  commands.ru.md  critical_analysis.md  cross-project-template.md  cross-project-template.ru.md  ecosystem.md  ecosystem.ru.md  features.md  features.ru.md  how-it-works.md  how-it-works.ru.md  notebooklm-setup.md  notebooklm-setup.ru.md  obsidian-setup.md  obsidian-setup.ru.md  raw-inbox.md  raw-inbox.ru.md  setup.md  setup.ru.md  vision_v2_full.md  web-clipper-setup.md  web-clipper-setup.ru.md
hooks/: pre-compact.py  pre_compact.py  session-end.py  session_end.py  session_start.py  shared.py  user_prompt_submit.py
knowledge/: index.md  log.md
plans/: NEXT-SESSION.md  README-draft.md  implementation-plan.md  metamode-public-repo.md  next-session-1-finish.md  next-session-2-memory-audit.md  next-session-3-final-cleanup.md  next-session-docs-ecosystem.md  next-session-docs-polish.md  next-session-e2e-test.md  next-session-final-verification.md  next-session-global-hooks.md  next-session-integrations.md  next-session-lint-reminder.md  next-session-memory-audit-s1.md  next-session-memory-audit-s2.md  next-session-memory-audit-s3.md  next-session-memory-audit-s4.md  next-session-notebooklm-login-fix.md  next-session-public-repo.md  (+4 more)
raw/: README.md  (+1 more)
(+140 files in other folders)
