[project]
name = "metamode"
version = "0.1.0"
description = "Persistent wiki-memory layer for Claude Code — fork of coleam00/claude-memory-compiler"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.58",
    "tzdata>=2024.1",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
